--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_RELAY_ENDPOINT=https://nextjs-graphql-with-prisma-relay.vercel.app/api
+NEXT_PUBLIC_RELAY_ENDPOINT=https://api-eu-central-1.graphcms.com/v2/cke1fiaby1c7f01z19a7ud3ag/master
