--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -2,7 +2,7 @@
   "schemaPath": "schema/schema.graphql",
   "extensions": {
     "endpoints": {
-      "dev": "https://nextjs-graphql-with-prisma-relay.vercel.app/api"
+      "dev": "https://api-eu-central-1.graphcms.com/v2/cke1fiaby1c7f01z19a7ud3ag/master"
     }
   }
 }
