--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@chakra-ui/core": "^1.0.0-rc.3",
     "graphql": "^14.6.0",
     "next": "latest",
     "react": "^16.13.0",
