--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Example of Next.js with Relay Modern and react-relay-network-modern",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "yarn schema && yarn relay && next build",
     "start": "next start",
     "relay": "relay-compiler --src ./ --exclude '**/.next/**' '**/node_modules/**' '**/test/**'  '**/__generated__/**' --exclude '**/schema/**' --schema ./schema/schema.graphql --artifactDirectory __generated__",
     "schema": "graphql get-schema -e dev"
